test/variable/duplicate_parameter.lox
fn foo(arg,
        arg) { // error: already a variable with this name in this scope
  "body"
}
